# spec-1V0.7

./: .dockerignore  .env.example  .gitignore  .mcp.json  .pre-commit-config.yaml  ARCHITECTURE.md  AUDIT_NOTES.md  AUDIT_REPORT.md  CASE_STUDY.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DESIGN_INTENT.md  Dockerfile  FALLBACK_SETUP.md  HANDOFF.md  INDEX.md  INVESTOR_PITCH.md  LAUNCH_PLAN.md  LAUNCH_READINESS.md  LICENSE  MANIFEST.md  MERGE_SAFETY_PLAN.md  MODULE_AUDIT_REPORT.md  Makefile  OUTREACH_TEMPLATES.md  README.md  REPAIR_PLAN_PR64_66_WORKFLOWS.md  ROADMAP.md  TEST_STATUS.md  coverage.xml  index.html  mcp_server.py  monitor.py  pyproject.toml  requirements.txt  spec1_political_web.html  spec1_portfolio.html  spec1_ui.html  start_spec1.sh
.claude/: settings.json
.github/: sgmllib3k-1.0.0-py3-none-any.whl
.github/scripts/: check_hardcoded_labels.py  install_sgmllib_stub.py
.github/workflows/: pages.yml  python-package.yml  run-cycle.yml
PSYCHE-OPS/: psycheops_597_dprk_missile_narrative.md  psycheops_597_dprk_missile_report.md  psycheops_597_dprk_narrative.md  psycheops_597_dprk_report.md
Plans/: adaptive-soaring-lovelace.md  hashed-hatching-hartmanis.md  lets-fork-purring-lobster.md
analyst_loop/: audits.jsonl  cases.jsonl  outputs.jsonl  verdicts.jsonl
assets/: brief_style.css
briefs/: spec1_brief_2026-04-12.md  spec1_brief_2026-04-14.md  spec1_brief_2026-04-17.md  spec1_brief_2026-04-18.md  spec1_brief_2026-04-24.md  spec1_brief_2026-05-17.md  spec1_brief_latest.md  spec1_prompts_2026-04-24.md  spec1_prompts_2026-05-17.md  spec1_prompts_latest.md
cls_pdx1/: DATA_MODELS.md  pdx1_3d_service_map.html  pdx1_dashboard.html  pdx1_service_map.html  pdx1_terminal_power_map.html  pdx1_terminal_service_map.html  resolver.py
cls_pdx1/data/: entities_seed.json  loader.py  media_coverage_patterns.jsonl  officials_seed.json  test_external_data.py  x_handles.json
cls_pdx1/demos/: metro_president_vacancy.py
cls_pdx1/sources/: olis.py  orestar.py
db/migrations/: 001_harvest_layer.sql  002_parse_score_layer.sql  003_investigate_verify.sql  004_political_signals.sql  005_analyze_store.sql  006_leads_briefs.sql  007_archive.sql  008_analyst_loop.sql  009_missing_tables.sql  009_psyop_briefs_verdicts.sql
demo/: genie_lamp_demo.html  higgins_almanac.html
docs/: ACCESS_AUDIT.md  ANOMALY_LAYER_PRODUCT_DRAFT.md  EMAIL_NEWSLETTER_DRAFT.md  HIGGINS_ONE_PAGER_SELL_SHEET.md  HIGGINS_PERSONA_VOICE_BIBLE.md  INFLUENCE_DESK_PRODUCT_DRAFT.md  MCB_PUBLIC_HOME_DRAFT.md  MODULARITY_PLAYBOOK_DRAFT.md  MODULAR_PRODUCT_PATTERNS_IN_SPEC1.md  PORTLAND_DATA_SOURCES.md  REPAIR_PLAN_PR64_66_WORKFLOWS.md  SELL_IN_2_HOURS.md  SHOP_MANUAL.md  SPEC-1_MODULAR_PRODUCT_PLATFORM.md  SPEC1_MARKETABLE_ACTION_PLAN.md  SPEC1_PRODUCT_VISION_AND_NEXT_STEPS.md  STRATEGIC_GO_TO_MARKET_PLAN.md  TEST_STATUS.md  THE_VISION_SPEC1_AS_CIVILIZATIONAL_INFRASTRUCTURE.md  VICTORY_LAP_SPEC1_CIVILIZATIONAL_TRUTH_INFRASTRUCTURE.md  api-integration.md  api.md  architecture.md  case_study.md  customization.md  deployment.md  portfolio.md  quickstart.md  research_mode.md  research_mode_playbook.md  runbook.md  scalability_tracker.md
docs/investor_outreach/: INVESTOR_PITCH.md
memory/: context.md  decisions.md  session_log.md
research/topics/: topic_dprk_missile_indigenization.json  topic_portland_metro_housing_levy_implementation.json
scripts/: anthropic_smoke.py  check_ready.sh  harvest_index.py  promote.py  run.sh  run_cycle.sh  setup_dev.sh  spec1_setup.sh  tag_repo.py
src/: spec1_dual_write_config.py  spec1_labels.py
src/cls_analyst_loop/: __init__.py  __main__.py  audit.py  cli.py  schemas.py  store.py
src/cls_calibration/: __init__.py  (+6 more)
tests/: conftest.py  test_adapter_registry.py  test_analyst_loop.py  test_analysts.py  test_api.py  test_auth.py  test_brief_schemas.py  test_briefing.py  test_calibration.py  test_calibration_proposer.py  test_congress_anomaly.py  test_congress_api.py  test_congress_pipeline.py  test_congress_resolver.py  test_congressional.py  test_credibility.py  test_cursor_reader.py  test_cycle.py  test_e2e_metro_president_vacancy.py  test_engine.py  test_fallback_client.py  test_fara.py  test_feed.py  test_founder_brain.py  test_harvester.py  test_indexed_queries.py  test_labels_compliance.py  test_leads.py  test_leg_jud.py  test_logging_utils.py  test_mcp_server.py  test_metrics.py  test_narrative.py  test_olis_live.py  test_operator_output.py  test_orestar_resolver.py  test_pdf_render.py  test_pdx1_anomaly.py  test_pdx1_gates.py  test_pdx1_legislation.py  (+28 more)
tools/: manual_publisher.py
(+318 files in other folders)
