[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spec1-engine"
version = "0.5.0"
description = "SPEC-1 Intelligence Engine — signal intelligence, psyop detection, leads, briefs, API, and MCP"
requires-python = ">=3.9"
dependencies = [
    "feedparser>=6.0",
    "requests>=2.31",
    "beautifulsoup4>=4.12",
    "lxml>=4.9",
    "python-dateutil>=2.8",
    "anthropic>=0.20",
    "python-dotenv>=1.0",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "apscheduler>=3.10",
    "pydantic>=2.0",
    "httpx>=0.27",
    "reportlab>=4.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "pytest-cov", "pytest-asyncio>=0.23", "httpx>=0.27", "bandit>=1.7", "mypy>=1.8"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"spec1_engine" = ["core/prompts/*.md"]
"spec1_api" = ["static/*.html"]

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.mypy]
python_version = "3.9"
ignore_missing_imports = true
warn_unused_ignores = true
no_implicit_reexport = false

[tool.bandit]
exclude_dirs = ["tests", ".venv", "node_modules"]
skips = ["B101"]
