[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spec1-engine"
version = "0.6.0"
description = "SPEC-1 Intelligence Engine — signal intelligence, psyop detection, leads, briefs, API, and MCP"
requires-python = ">=3.9"
dependencies = [
    "feedparser>=6.0",
    "requests>=2.31",
    "beautifulsoup4>=4.12",
    "lxml>=4.9",
    "python-dateutil>=2.8",
    "anthropic>=0.20",
    "python-dotenv>=1.0",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "apscheduler>=3.10",
    "pydantic>=2.0",
    "httpx>=0.27",
    "reportlab>=4.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "pytest-cov", "pytest-asyncio>=0.23", "httpx>=0.27"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"spec1_core" = ["core/prompts/*.md"]
"spec1_analytics" = ["**/*.py"]
"spec1_api" = ["static/*.html"]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "--strict-markers -q"

[tool.coverage.run]
branch = true
source = ["src"]
omit = ["*/test_*", "*/__pycache__/*"]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false

[tool.ruff]
target-version = "py39"
line-length = 150

[tool.ruff.lint]
select = ["E", "F", "W", "C901"]
ignore = [
    "E402",   # module-level import not at top (used for conditional imports in cycle.py / main.py)
    "E741",   # ambiguous variable name `l` — pre-existing in formatters
    "E702",   # multiple statements on one line — pre-existing in tests
    "C901",   # function too complex — existing pipeline functions (run_cycle=48, run=21, etc.)
]
exclude = [".venv", ".git", "build", "dist"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E501"]   # long XML/string literals in test fixtures are acceptable

[tool.bandit]
severity_level = "medium"
skips = ["B101"]
